--- a/.github/workflows/Default.yml
+++ b/.github/workflows/Default.yml
@@ -7,17 +7,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: check repository
-        uses: actions/checkout@v4
-
-      - name: login to docker registry
-        uses: docker/login-action@v3
-        with:
-          username: ${{secrets.DOCKERHUB_USERNAME}}
-          password: ${{secrets.DOCKERHUB_TOKEN}}
+        uses: actions/checkout@v4          
 
       - name: build and push docker image to registry
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v6.4
         with:
+          registry: docker.io
+          username: ${{secrets.DOCKERHUB_USERNAME}}
+          password: ${{secrets.DOCKERHUB_TOKEN}}
+          image: vouzamo/score-stream
+          tags: latest
           dockerfile: ./src/Vouzamo.Web.WebApp/Dockerfile
           push: true
-          tags: vouzamo/score-stream:latest
+          
