--- a/.github/workflows/Default.yml
+++ b/.github/workflows/Default.yml
@@ -2,21 +2,26 @@ name: Build and Push Docker Image to Docker Hub
 
 on: push
 jobs:
-  push_to_registry:
-    name: push docker image to hub
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: check repository
-        uses: actions/checkout@v4          
-
-      - name: build and push docker image to registry
-        uses: docker/build-push-action@v6.4
+      -
+        name: Checkout
+        uses: actions/checkout@v4
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v3
         with:
-          registry: docker.io
-          username: ${{secrets.DOCKERHUB_USERNAME}}
-          password: ${{secrets.DOCKERHUB_TOKEN}}
-          image: vouzamo/score-stream
-          tags: latest
-          dockerfile: ./src/Vouzamo.Web.WebApp/Dockerfile
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      -
+        name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./src/Vouzamo.ScoreStream.WebApp/Dockerfile
           push: true
-          
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/score-stream:latest
